<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    <ImageView
        android:id="@+id/foto_sampul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        android:src="@drawable/doredake"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_profil"
        android:layout_width="145dp"
        android:layout_height="152dp"
        android:layout_marginTop="-58dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/foto_sampul"
        android:layout_centerInParent="true"
        android:contentDescription="@string/bokudesukedo"
        android:src="@drawable/boku"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto_profil"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/notoserif_jp_regular"
        android:text="@string/nama"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/nama"
        android:textSize="15sp"
        android:fontFamily="@font/notoserif_jp_regular"
        android:text="@string/email"/>

    </RelativeLayout>

</ScrollView>